--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
 </head>
 <body>
     <div class="login-page">
         <div class="form">
           <form class="login-form">
             <input id= "id" type="text" placeholder="아이디"/>
+            <input id= "name" type="text" placeholder="이름"/>
             <input id= "psword" type="password" placeholder="비밀번호"/>
-            <!-- <button>login</button> -->
-            <p id="button">login</p>
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
-          </form>
+            <input id= "confirm-psword" type="password" placeholder="비밀번호 확인"/>
+            <!-- <button>회원가입</button> -->
+            <p id="button">회원가입</p>
+            <p class="message">Already registered?<a href="/login">Login</a></p>
+          </form> <!--form 내부의 button이 있으면 button을 누르면 페이지가 리로드 된다. 따라서 p 태그로 바꾼다.-->
         </div>
       </div>
 </body>
